<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

<!--    Number 9 button view-->
    <Button
        android:id="@+id/btnNum9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_9"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 8 button view-->
    <Button
        android:id="@+id/btnNum8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_8"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNum9"
        app:layout_constraintEnd_toStartOf="@+id/btnNum7"
        app:layout_constraintStart_toEndOf="@+id/btnNum9"
        app:layout_constraintTop_toTopOf="@+id/btnNum9" />

<!--    Number 7 button view-->
    <Button
        android:id="@+id/btnNum7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/number_7"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEqual"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 6 button view-->
    <Button
        android:id="@+id/btnNum6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum9"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 5 button view-->
    <Button
        android:id="@+id/btnNum5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNum6"
        app:layout_constraintEnd_toStartOf="@+id/btnNum4"
        app:layout_constraintStart_toEndOf="@+id/btnNum6"
        app:layout_constraintTop_toTopOf="@+id/btnNum6" />


<!--Number 4 button view-->
    <Button
        android:id="@+id/btnNum4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNum7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum7"
        app:layout_constraintTop_toBottomOf="@+id/btnNum7"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 3 button view-->
    <Button
        android:id="@+id/btnNum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum6"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 2 button view-->
    <Button
        android:id="@+id/btnNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNum3"
        app:layout_constraintEnd_toStartOf="@+id/btnNum1"
        app:layout_constraintStart_toEndOf="@+id/btnNum3"
        app:layout_constraintTop_toTopOf="@+id/btnNum3" />

<!--    Number 1 button view-->
    <Button
        android:id="@+id/btnNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNum4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum4"
        app:layout_constraintTop_toBottomOf="@+id/btnNum4"
        app:layout_constraintVertical_bias="0.0" />

<!--    Number 0 button view-->
    <Button
        android:id="@+id/btnNum0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDecimal"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toTopOf="@+id/btnDecimal" />

<!--    Decimal button view -->
    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/decimal_sign"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNum3"
        app:layout_constraintVertical_bias="0.0" />

<!--    Clear button view-->
    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNum1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnNum1"
        app:layout_constraintTop_toBottomOf="@+id/btnNum1"
        app:layout_constraintVertical_bias="0.0" />

<!--    Add operator button view-->
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/addition_sign"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayEditTV"
        app:layout_constraintVertical_bias="0.023" />

<!--    Subtract operator button view-->
    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:text="@string/subtract_sign"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

<!--    Multiply operator button view-->
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:text="@string/multiplication_sign"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSubtract"
        app:layout_constraintStart_toEndOf="@+id/btnSubtract"
        app:layout_constraintTop_toTopOf="@+id/btnSubtract" />

<!--    Divide operator button view-->
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:text="@string/division_sign"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnMultiply"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toTopOf="@+id/btnMultiply" />

<!--    Equal button view to get the equation result-->
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="68dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:text="@string/equals_sign"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDivide"
        app:layout_constraintStart_toEndOf="@+id/btnDivide"
        app:layout_constraintTop_toTopOf="@+id/btnDivide" />

<!--    Edit text view to display equation and the result-->
    <EditText
        android:id="@+id/displayEditTV"
        android:layout_width="414dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.284" />

<!--    App title text-->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mycalculator_app"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>